--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,27 +8,29 @@ project(graphs LANGUAGES CXX VERSION 0.0.0)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(GRAPHS_LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/libs")
+
+set(FMT_TEST OFF CACHE BOOL "" FORCE)
+set(FMT_DOC OFF CACHE BOOL "" FORCE)
+
+add_subdirectory(${GRAPHS_LIB_DIR}/fmt)
+
 add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 set(${PROJECT_NAME}_SOURCES
-        ${CMAKE_CURRENT_LIST_DIR}/crampl/MemberComparator.h
-        ${CMAKE_CURRENT_LIST_DIR}/crampl/NonTypeList.h
-        ${CMAKE_CURRENT_LIST_DIR}/crampl/PointerRange.h
-        ${CMAKE_CURRENT_LIST_DIR}/crampl/ForEachMember.h
-        ${CMAKE_CURRENT_LIST_DIR}/crampl/MultiKeyMap.h
-        ${CMAKE_CURRENT_LIST_DIR}/crampl/ContainerContainer.h
-        ${CMAKE_CURRENT_LIST_DIR}/crampl/Index.h
-        ${CMAKE_CURRENT_LIST_DIR}/crampl/crampl.h)
+        ${CMAKE_CURRENT_LIST_DIR}/graphs/Graph.h
+        ${CMAKE_CURRENT_LIST_DIR}/graphs/Vertex.h)
 target_sources(${PROJECT_NAME} INTERFACE ${${PROJECT_NAME}_SOURCES})
+target_link_libraries(${PROJECT_NAME} INTERFACE fmt::fmt-header-only)
 
 if (NOT ${PROJECT_NAME}_IS_SUBPROJECT)
     option(${PROJECT_NAME}_BUILD_TESTING "Build ${PROJECT_NAME} tests" ON)
 endif()
 
 if (${PROJECT_NAME}_BUILD_TESTING)
-    if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/libs/Catch2/CMakeLists.txt)
-        add_subdirectory(libs/Catch2)
-        include(${CMAKE_CURRENT_LIST_DIR}/libs/Catch2/contrib/Catch.cmake)
+    if (EXISTS ${GRAPHS_LIB_DIR}/Catch2/CMakeLists.txt)
+        add_subdirectory(${GRAPHS_LIB_DIR}/Catch2)
+        include(${GRAPHS_LIB_DIR}/Catch2/contrib/Catch.cmake)
     elseif (NOT TARGET Catch2::Catch2)
         find_package(Catch2 QUIET)
         if (CATCH2_FOUND)
