tests for vertex and cleanup

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable (graphs_test
         main.cpp
-        Graph.cpp)
+        Graph.cpp
+        Vertex.cpp)
 target_link_libraries(graphs_test graphs Catch2::Catch2)
 catch_discover_tests(graphs_test)
